--- a/WolfPaw ScreenSnip/uc_WpfEditLayer.xaml
+++ b/WolfPaw ScreenSnip/uc_WpfEditLayer.xaml
@@ -9,7 +9,7 @@
 			 Background="AliceBlue"
              d:DesignHeight="300" d:DesignWidth="300">
 	<Grid x:Name="mainGrid" Opacity="1">
-		<Canvas x:Name="c_Canvas" MouseDown="c_Canvas_MouseDown" MouseMove="c_Canvas_MouseMove" PreviewMouseDown="c_Canvas_PreviewMouseDown">
+		<Canvas x:Name="c_Canvas" MouseDown="c_Canvas_MouseDown" MouseMove="c_Canvas_MouseMove" PreviewMouseDown="c_Canvas_PreviewMouseDown" Background="AliceBlue" MouseUp="c_Canvas_MouseUp">
 			
 		</Canvas>
 
